# orderbook-aggregator-service

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entrypoints/: entrypoint.sh
src/: aggregator.rs  binance.rs  bitstamp.rs  client.rs  lib.rs  main.rs  order_book.rs  proto.rs  server.rs
