[package]
name = "keyrock-challenge"
version = "0.1.0"
authors = ["Jiri Zajpt <5701+jzajpt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
websocket-lite = "0.5"
serde = { version = "1", features=["derive"] }
serde_json = "1"
futures = "*"
rust_decimal = "1.10"
rust_decimal_macros = "1.10"
serde-aux = "2.1"
sorted-vec = "0.5"
tonic = "0.4"
prost = "0.7"
partial_application = "0.2.1"


[build-dependencies]
tonic-build = "0.4.0"
