[package]
name = "orderbook-aggregator"
version = "0.1.0"
authors = ["Jiri Zajpt <5701+jzajpt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "aggregator-server"
path = "src/server.rs"

[dependencies]
dotenv = "0.15"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
websocket-lite = "0.5"
serde = { version = "1", features=["derive"] }
serde_json = "1"
futures = "*"
rust_decimal = "1.10"
rust_decimal_macros = "1.10"
serde-aux = "2.1"
sorted-vec = "0.5"
tonic = "0.4"
prost = "0.7"
partial_application = "0.2.1"
futures-core = "0.3"
async-trait = "0.1"
tokio-stream = { version =  "0.1", features = ["net"] }
strum = "0.20"
strum_macros = "0.20"

[build-dependencies]
tonic-build = "0.4.0"
